--- a/analyses/7habitat/1-PCA.Rmd
+++ b/analyses/7habitat/1-PCA.Rmd
@@ -75,11 +75,6 @@ log_data <- data %>%
 
 The four regions could be considered characteristics we want, so would it be useful to convert them to dummies?
 
-```{r}
-
-
-```
-
 # Pairwise Correlations
 
 ```{r}
@@ -104,7 +99,8 @@ plot(pca, type = "lines")
 
 # Plot
 ggbiplot(pca, group = log_data$four_region_north_ci, ellipse = T) +
-  theme_minimal()
+  theme_minimal() +
+  labs(title = "All Trait Variables")
 
 # Principal component loadings
 pca$rotation
@@ -135,10 +131,83 @@ abline(h = 0.98)
 summary(pca)
 ```
 
+# Reducing Variables
+
+PCA aims to estimate the contribution of different variables to the variation among the points - if there is high correlation between some of the variables, that can result in a higher weight of those variables in the estimation of the components.
+
+Based on my understanding, this is something that you wouldn't want to manipulate if these were variables signifying different things about the data, however if you have multiple variables that are measuring the same "underlying" aspect of the data... e.g. multiple variables estimating hard substrate (maybe?) that it could be worthwhile to discard them.
+
+## Revisit Correlations
+
+```{r}
+# Reminder that this takes a minute or two
+ggpairs(log_data[4:10], aes(col = log_data$four_region_north_ci, alpha = 0.8))
+```
+
+## Decisions
+
+- Remove minimum and maximum depth, and just keep depth_range
+- Remove all the different hard/soft calculations and just keep total hard/soft
+- Reduce duplicates among habitat types
+- Remove random non-habitat characteristics (asbs overlap, inat obs)
+
+### 1. Reduce just hard/soft across depth zones
+
+```{r}
+log_data_reduced <- log_data %>% 
+  select(name, 
+         mpa_class, 
+         four_region_north_ci, 
+         distance_to_port, 
+         size_km2, 
+         shore_span_km, 
+         historical_protection_overlap,
+         sandy_beach_km, 
+         rocky_inter_km, 
+         offshore_rock_km, 
+         max_kelp_canopy_cdfw_km2,
+         coastal_marsh_km,
+         tidal_flats_km,
+         total_hard_substrate,
+         total_soft_substrate,
+         depth_range)
+```
+
+From 40 variables to 18 variables
+
+
+## Reduced PCA
+
+
+
+
+
+```{r}
+pca_reduced <- prcomp(log_data_reduced[4:16],
+                      center = TRUE,
+                      scale = TRUE) 
+
+summary(pca_reduced)
+
+plot(pca_reduced, type = "lines")
+
+# Plot
+ggbiplot(pca_reduced, group = log_data_reduced$four_region_north_ci, 
+         ellipse = T) +
+  theme_minimal() +
+  labs(title = "Reduced Trait Variables")
+
+# Principal component loadings
+pca$rotation
+```
+
 
 # References
 
 Useful guide to PCA analyses: https://www.analyticsvidhya.com/blog/2016/03/pca-practical-guide-principal-component-analysis-python/
 https://www.datacamp.com/tutorial/pca-analysis-r
+
+Explanation for whether to reduce variables before doing PCA:
+https://stats.stackexchange.com/questions/50537/should-one-remove-highly-correlated-variables-before-doing-pca
 
 
