--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -164,7 +164,8 @@ kelp_fish_counts <- kelp_fish_counts %>%
                     pivot_wider(names_from=species, values_from=counts, values_fill = 0) %>%
                     janitor::clean_names()%>%
                     drop_na(region4)%>%
-                    dplyr::select(-c(no_organisms_present_in_this_sample))
+                    mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
+                    dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class, MHW, zone, level, transect, everything(),-c(no_organisms_present_in_this_sample))
 
 #Export
 
@@ -259,13 +260,115 @@ kelp_swath_counts <- kelp_swath_counts %>%
 kelp_swath_counts <- kelp_swath_counts %>%
                     pivot_wider(names_from=species, values_from=counts, values_fill = 0) %>%
                     janitor::clean_names()%>%
-                    drop_na(region4)
+                    drop_na(region4) %>%
+                    mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
+                    dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class, MHW, zone, transect, everything())
                     #dplyr::select(-c(no_organisms_present_in_this_sample))
 
 #Export
 
 ```
 
+
+#process kelp forest upc data
+```{r}
+data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/monitoring_kelp"
+input_file <- "MLPA_kelpforest_upc.4.csv" 
+kelp_upc_counts <- read.csv(file.path(data_path, input_file)) %>%
+                    janitor::clean_names()
+
+
+#select vars and clean
+kelp_upc_counts <- kelp_upc_counts %>%
+                    filter(category=="COVER")%>%
+                    dplyr::select(year, site, zone, transect, classcode, count)%>%
+                    group_by(year, site, zone, transect, classcode)%>%
+                    summarize(total_count = sum(count)) #counts in raw data are grouped by size class. Take summary across all sizes
+
+
+#join species names by class code 
+input_file <- "MLPA_kelpforest_taxon_table.4.csv"  
+kelp_taxon <- read.csv(file.path(data_path, input_file)) %>%
+                    janitor::clean_names() %>%
+                    dplyr::select(classcode, species_definition) %>%
+                    distinct() #remove duplicates
+
+kelp_upc_counts<-  left_join(kelp_upc_counts, kelp_taxon, by="classcode")
+
+kelp_upc_counts <- kelp_upc_counts %>%
+                    dplyr::select(year, site, zone, transect, species=species_definition, total_count)
+
+
+#add affiliated_mpa
+
+input_file <- "MLPA_kelpforest_site_table.4.csv" 
+kelp_sites <- read.csv(file.path(data_path, input_file)) %>%
+                    janitor::clean_names() %>%
+                    dplyr::select(site, ca_mpa_name_short, mpa_class=site_designation, mpa_designation=site_status)%>%
+                    distinct() #remove duplicates
+
+kelp_upc_counts <- left_join(kelp_upc_counts, kelp_sites, by="site")
+
+kelp_upc_counts <- kelp_upc_counts %>%
+                    ungroup() %>%
+                    dplyr::select(year, affiliated_mpa=ca_mpa_name_short,mpa_class, mpa_designation, zone, transect, species, total_count) %>%
+                    mutate(mpa_designation = ifelse(mpa_designation=="reference","ref",mpa_class))
+
+
+
+#add 4 regions
+data_path <- "/home/shares/ca-mpa/data/sync-data/mpa_traits"
+input_file <- "mpa-attributes.xlsx" 
+four_region <- readxl::read_excel(file.path(data_path, input_file), sheet=1, skip = 0, na="NA")
+
+regions <- four_region %>%
+  dplyr::select(name, region3=bioregion, region4 = four_region_north_ci)
+
+kelp_upc_counts$affiliated_mpa <- tolower(kelp_upc_counts$affiliated_mpa)
+
+kelp_upc_counts <- left_join(kelp_upc_counts, regions, by=c("affiliated_mpa"="name"))
+
+
+#add defacto SMRs
+data_path <- "/home/shares/ca-mpa/data/sync-data/mpa_traits"
+input_file <- "mpa-attributes.xlsx" 
+defacto_smr <- readxl::read_excel(file.path(data_path, input_file), sheet=5, skip = 0, na="NA")%>%
+               filter(group=="kelp") %>%
+               dplyr::select(affiliated_mpa, mpa_class)
+              
+
+kelp_upc_counts <- left_join(kelp_upc_counts, defacto_smr, by="affiliated_mpa")
+
+
+#clean up
+kelp_upc_counts <- kelp_upc_counts %>%
+                    mutate(mpa_defacto_designation = ifelse(mpa_designation=="ref","ref",mpa_class.y))%>%
+                    dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class = mpa_class.y, mpa_defacto_designation, zone, transect, species, total_count)
+                 
+kelp_upc_counts$mpa_defacto_class <- tolower(kelp_upc_counts$mpa_defacto_class)
+kelp_upc_counts$mpa_defacto_designation <- tolower(kelp_upc_counts$mpa_defacto_designation)
+
+kelp_upc_counts <- kelp_upc_counts %>%
+                    group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, zone, transect, species) %>%
+                    summarise(counts = sum(total_count)) #make sure species are not duplicates by summarizing at the transect level (total counts)
+
+
+
+#reshape to wide format
+kelp_upc_counts <- kelp_upc_counts %>%
+                    pivot_wider(names_from=species, values_from=counts, values_fill = 0) %>%
+                    janitor::clean_names()%>%
+                    drop_na(region4) %>%
+                    mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
+                    dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class, MHW, zone, transect, everything())
+                    #dplyr::select(-c(no_organisms_present_in_this_sample))
+
+#Export
+
+
+
+
+```
 
 
 
